--- a/grafana/datasources/default.yml
+++ b/grafana/datasources/default.yml
@@ -4,3 +4,6 @@ datasources:
   type: loki
   access: proxy
   url: http://loki:3100
+- name: prometheus
+  type: prometheus
+  url: http://prometheus:9090
