--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,7 +2,7 @@ global:
   scrape_interval: 3s
   evaluation_interval: 3s
 
-scrape_configs:
-  - job_name: 'adventure_game'
-    static_configs:
-      - targets: ['host.docker.internal:1337']
+storage:
+  tsdb:
+    out_of_order_time_window: 30m
+
