--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - 9090:9090
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    command: --config.file=/etc/prometheus/prometheus.yml --enable-feature=otlp-write-receiver
+    command: --config.file=/etc/prometheus/prometheus.yml --web.enable-otlp-receiver
     networks:
       - adventure
   loki:
